feat: Mention start diagram

--- a/courses/aud/exercises/ex02.tex
+++ b/courses/aud/exercises/ex02.tex
@@ -237,7 +237,7 @@ gegeben, $S$ ist das Startdiagramm: \\
   Sprache erzeugt.
 
   \subparagraph{Lsg.} Die Sprache wird von dem folgenden System von
-  Syntaxdiagrammen erzeugt: \\
+  Syntaxdiagrammen mit dem Startdiagramm \emph{A} erzeugt: \\
   \begin{tikzpicture}
     \node at (0, 0) {A};
     \node[draw, rectangle] (B) at (1, -1) {B};
