--- a/courses/an10/homework/ha11.tex
+++ b/courses/an10/homework/ha11.tex
@@ -85,4 +85,53 @@
     \frac{\sin\qty\big(x + y)}{\cos\qty\big(x + y)}
   \end{flalign*}
 \end{enumerate}
+
+\newpage
+\paragraph{70. In dieser Aufgabe sollen Sie die Anwendung der Polarkoordinaten
+  komplexer Zahlen üben.}
+\begin{enumerate}[(a)]
+\item Geben Sie mit Hilfe der Exponentialdarstellung einer Zahl
+  $z \in \mathbb{C}$ eine geometrische Interpretation der Multiplikation
+  in $\mathbb{C}$ in der komplexen Zahlebene.
+
+  \subparagraph{Lsg.} Seien $z_1, z_2 \in \mathbb{C}$ und
+  $\xi_1, \xi_2 \in \big[0, 2\pi\big)$ so gewählt, dass
+  $z_1 = \abs{z_1} \cdot e^{\xi_1 \cdot i}$ und
+  $z_2 = \abs{z_2} \cdot e^{\xi_2 \cdot i}$.
+
+  Nun ist $z_1 \cdot z_2 = \abs{z_1} e^{i \xi_1} \cdot \abs{z_2} e^{i \xi_2}
+  = \abs{z_1 z_2} e^{i\qty\big(\xi_1 + \xi_2)}$.
+
+  \begin{tikzpicture}[scale=1.5]
+    \begin{axis}[
+      axis x line=center,
+      axis y line=center,
+      grid=both,
+      xlabel={Re},
+      xmin=-2.1,
+      xmax=2.1,
+      xticklabels={,,},
+      ylabel={Im},
+      ymin=-2.1,
+      ymax=2.1,
+      yticklabels={,,},
+    ]
+      \node[circle, fill, label=right:{$z_1$}, inner sep=2pt] at (0.5,1) {};
+      \node at (0.2, 0.1) {\tiny $\xi_1$};
+      \node[black!70!green, circle, fill, label=above:{$z_2$}, inner sep=2pt] at (-0.4,0.4) {};
+      \node[black!70!green] at (-0.07, 0.2) {\tiny $\xi_2$};
+      \node[black!50!red, circle, fill, label=below:{$z_1 \cdot z_2$}, inner sep=2pt] at (-1.74,-0.57) {};
+      \node[black!50!red] at (-1.3, 0.5) {\tiny $\xi_1 + \xi_2$};
+
+      \draw (0,0) -- (0.5,1) node[right, pos=.5] {\tiny $\abs{z_1}$};
+      \draw (0.3,0) arc (0:64:0.3);
+
+      \draw[black!70!green] (0,0) -- (-0.4,0.4) node[below left = -3pt, black!70!green, pos=.5] {\tiny $\abs{z_2}$};
+      \draw[black!70!green] (0.35,0) arc (0:135:0.35);
+
+      \draw[black!50!red] (0,0) -- (-1.74,-0.57) node[below=4pt, black!50!red, pos=.5] {\small $\abs{z_1 + z_2}$};
+      \draw[black!50!red] (1,0) arc (0:198:1);
+    \end{axis}
+  \end{tikzpicture}
+\end{enumerate}
 \end{document}
