--- a/courses/an10/homework/ha11.tex
+++ b/courses/an10/homework/ha11.tex
@@ -52,17 +52,17 @@
     \,\middle|\, k \in \mathbb{Z}}$ und
   $\cos\qty\big(x + y) = \cos x \cos y - \sin x \sin y$.
   \begin{flalign*}
-    \tan\qty\big(x)\tan\qty\big(y) &= 1 &&\iff \\
+    \tan\qty\big(x)\tan\qty\big(y) &= 1 \\
     \frac{\sin x}{\cos x} \cdot \frac{\sin y}{\cos y} &= 1
     &&{\Big |} \cdot \frac{\cos y}{\sin y} \\
     \frac{\sin x}{\cos x} &= \frac{\cos y}{\sin y} \\
     \sin x \sin y &= \cos x \cos y \\
     0 &= \cos x \cos y - \sin x \sin y \\
     0 &= \cos\qty\big(x + y) &\overset{\text{Satz 13.20}}&\iff \\
-    x + y &= \frac{pi}{2} + k\pi, k \in \mathbb{Z}
+    x + y &= \frac{\pi}{2} + k\pi, k \in \mathbb{Z}
   \end{flalign*}
 
-  $\Rightarrow$ \underline{$y = \frac{pi}{2} + k\pi - x$, $k \in \mathbb{Z}$}.
+  $\Rightarrow$ \underline{$y = \frac{\pi}{2} + k\pi - x$, $k \in \mathbb{Z}$}.
 
 \item Es seien $x, y \in \mathbb{R} \setminus \qty{k\pi + \frac{\pi}{2}
     \,\middle|\, k \in Z}$.
