feat: 3rd part of 2nd task of 11th an10 homework

--- a/courses/an10/homework/ha11.tex
+++ b/courses/an10/homework/ha11.tex
@@ -174,5 +174,21 @@
   $\Rightarrow \Re \qty\big(\sqrt{3} + i)^{2022} = - 2^{2022}$
 
   $\Rightarrow \Im \qty\big(\sqrt{3} + i)^{2022} = 0$
+
+\item Bestimmen Sie alle komplexen 3-ten Wurzeln von $-8i$.
+
+  \subparagraph{Lsg.} Es ist $\abs{-8i} = 8$.
+  Nun ist ein $\xi$ gesucht mit $-8i = 8 \cdot \qty\big(\cos \xi + i \sin \xi)$.
+  Aus der Tabelle zu Sinus und Cosinus im Skript (nach Satz 13.20) folgt
+  $\xi = -\frac{\pi}{2}$.
+
+  Aus Satz 13.21 (3) der Vorlesung (``$w^n = z \iff
+  w \in \qty{\sqrt[n]{\abs{z}}e^i\qty(\frac{\xi}{n} + \frac{2k\pi}{n})}$'')
+  folgt
+  \begin{enumerate}[label={$w_{\arabic*} =$}]
+  \item $2 \cdot e^{i -\frac{\pi}{6} + \frac{2 \cdot 1 \pi}{3}} = 2 \cdot e^{i \frac{3\pi}{6}} = 2 \cdot e^{i \frac{\pi}{2}}$ 
+  \item $2 \cdot e^{i -\frac{\pi}{6} + \frac{2 \cdot 2 \pi}{3}} = 2 \cdot e^{i \frac{7\pi}{6}}$
+  \item $2 \cdot e^{i -\frac{\pi}{6} + \frac{2 \cdot 3 \pi}{3}} = 2 \cdot e^{i \frac{11\pi}{6}}$
+  \end{enumerate}
 \end{enumerate}
 \end{document}
