--- a/courses/an10/homework/ha12.tex
+++ b/courses/an10/homework/ha12.tex
@@ -49,12 +49,12 @@ Beweisen oder widerlegen Sie die folgenden Aussagen:
   \emph{gleichmäßig} gegen eine Funktion $f \colon X \to Y$ auf $M \subseteq X$,
   falls
   \[
-    \forall \epsilon > 0 \,\exists\, n_0 \in \mathbb{N}
+    \forall\, \epsilon > 0 \,\exists\, n_0 \in \mathbb{N}
     \,\forall\, n \geq n_0 \,\forall\, x \in M \colon
     d\qty\big(f_n(x), f(x)) < \epsilon
   \]
   Sei nun $\epsilon = \frac{1}{3}$ und $n \in \mathbb{N}_{\geq 1}$ beliebig.
-  Aus Satz 5.20 der Vorlesung
+  Aus Satz 5.20 (2) der Vorlesung
   (\emph{``Für $r > 0$ gilt $a < b \iff a^r < b^r$''}) folgt
   $x^{\frac{1}{n}} < 1^{\frac{1}{n}} = 1$ für $x \in \qty\big(0, 1)$
   - insbesondere ist $\qty(\frac{1}{2})^{\frac{1}{n}} \in \qty\big(0, 1)$.
@@ -63,6 +63,29 @@ Beweisen oder widerlegen Sie die folgenden Aussagen:
   \abs{\qty(\qty(\frac{1}{2})^{\frac{1}{n}})^n - 0} = \frac{1}{2} > \epsilon$,
   ein Widerspruch.
 
+\item Für $n \in \mathbb{N}$ seien
+  $g_n \colon \qty(0, \frac{1}{2}) \to \mathbb{R}$ definiert durch
+  $g_n\qty\big(x) \coloneqq x^n$.
+  Dann gilt
+  \[
+    g_n \to 0 \text{ gleichmäßig.}
+  \]
+  \subparagraph{Lsg.} Aus Beispiel 9.10 der Vorlesung folgt
+  $\displaystyle \lim_{n \to \infty} \qty(\frac{1}{2})^n = 0$, dass
+  heißt
+  \[
+    \forall\, \epsilon > 0 \,\exists\, n_0 \in \mathbb{N}
+    \,\forall\, n \geq n_0 \colon \abs{\qty(\frac{1}{2})^n - 0} =
+    \abs{\qty(\frac{1}{2})^n} < \epsilon
+  \]
+  Sei $x \in \qty(0, \frac{1}{2})$ beliebig gewählt.
+  Wieder aus Satz 5.20 (2) der Vorlesung folgt $x^n < \qty(\frac{1}{2})^n$.
+  Also gilt
+  \[
+    \forall\, \epsilon > 0 \,\exists\, n_0 \in \mathbb{N}
+    \,\forall\, n \geq n_0 \colon \abs{x^n - 0} =
+    \abs{x^n} < \epsilon \; \qty(\forall\, x \in \qty(0, \frac{1}{2}))
+  \]
 \end{enumerate}
 
 \end{document}
